@@ -252,4 +252,5 @@ i.default.values <- list(vertex=list(color="SkyBlue2",
                            arrow.size=1,
                            arrow.mode=i.get.arrow.mode),
                          plot=list(layout=layout.random,
-                           margin=c(0,0,0,0)))
+                           margin=c(0,0,0,0),
+                           rescale=TRUE))
